# Test_Mundo

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  fix.py  mundo_invest.db  pyproject.toml  requirements-dev.txt  requirements.txt  verificar_correcoes.ps1
.github/workflows/: ci.yml
alembic/: env.py
src/: config.py  main.py  security.py
src/api/: middleware.py  schemas.py
src/api/routers/: admin.py  clientes.py  webhook.py
src/application/use_cases/: criar_cliente_use_case.py  processar_webhook_use_case.py  reprocessar_pendentes_use_case.py  reprocessar_pipefy_use_case.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  cliente.py
src/domain/repositories/: __init__.py  interfaces.py
src/domain/value_objects/: email.py  prioridade.py
src/infrastructure/database/: __init__.py  connection.py  models.py  repositories_impl.py
src/infrastructure/graphql/: pipefy_adapter.py
tests/: conftest.py  test_cliente_entity.py  test_email_value_object.py  test_main.py
