[project]
name = "munnd-inv"
version = "2.2.0"
description = "Mundo Invest — Client Management API"
requires-python = ">=3.10"
authors = [{ name = "Marcos Zambon" }]
license = { text = "MIT" }

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
